...
                    <navigationItem key="navigationItem" id="eAI-OZ-snL">
                        <barButtonItem key="backBarButtonItem" title="Back" id="khc-zc-mY5"/>
                        <barButtonItem key="leftBarButtonItem" title="Menu" id="TbI-ov-z46"/>
                    </navigationItem>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6OX-wm-X4m">
                                <rect key="frame" x="16" y="20" width="46" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2CW-xS-fIt">
                                <rect key="frame" x="16" y="87" width="79" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repeat Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asb-oM-wFM">
                                <rect key="frame" x="16" y="154" width="137" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="16" y="221" width="343" height="30"/>
                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TtP-m7-Kce">
                                <rect key="frame" x="79" y="259" width="217" height="30"/>
                                <state key="normal" title="I have an account. Let me login."/>
                                <connections>
                                    <action selector="back:" destination="9a9-GN-4vX" eventType="touchUpInside" id="dqL-d3-v2h"/>
...
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Account" id="Oe3-gp-Kma">
                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="My Spots" id="FdK-fP-dF1">
                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="My Bids" id="XIK-gt-mBe">
                                <rect key="frame" x="0.0" y="116" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Settings" id="Mkh-os-6v7">
                                <rect key="frame" x="0.0" y="160" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Logout" id="NAo-Ki-6mJ">
                                <rect key="frame" x="0.0" y="204" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                                </connections>
                            </tableViewCell>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Map" id="g5O-Ye-p4K">
                                <rect key="frame" x="0.0" y="248" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
...
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Payment" id="GWy-3k-1j8">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="Xxs-en-eWu">
                            <connections>
                                <action selector="payment:" destination="I3i-6A-cSC" id="8Ah-ha-80m"/>
...
                                <rect key="frame" x="16" y="162" width="172" height="30"/>
                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2d-Tn-15W">
                                <rect key="frame" x="16" y="280" width="343" height="30"/>
                                <state key="normal" title="BUY"/>
                                <connections>
                                    <action selector="buy" destination="ABi-bC-pIg" eventType="touchUpInside" id="gNb-ya-nJ6"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
