...
                /*let pushQuery = PFInstallation.query()
                pushQuery!.whereKey("SpotBidder", equalTo: object["user"] as! PFUser)
                let ifCancelledByBidder = object["CancelByBidder"] as! Bool
                if ifCancelledByBidder  != true {
                    let data = [
                        "alert" : "You bid is accepted. Go and pay for it." ,
                        "badge" : "Increment",
                        "sound" : "iphonenoti_cRjTITC7.mp3",]
                    // Send push notification to query
                   // let push = PFPush()
                  //  push.setQuery(pushQuery) // Set our Installation query
                   // push.setData(data)
                   // push.sendPushInBackground()
...
