...
   
    func addPlaceHodlerText() -> Void
    {
        for subView in searchBar.subviews  {
            for subsubView in subView.subviews  {
                if let textField = subsubView as? UITextField {
                    textField.attributedPlaceholder =  NSAttributedString(string:NSLocalizedString("type a address to search a parking spot", comment:""),
                        attributes:[NSForegroundColorAttributeName: UIColor.orangeColor()])
                }
            }
        }
    
    }
...
